# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./departments";
 export * from "./initiatives";
 export * from "./dependencies";
+export * from "./settings";
